<resources>
    <string name="app_name">Doctor Doc +</string>
    <string name="login">Iniciar sesion</string>
    <string name="dont_have_account">¿Quieres ser Doctor Doc?</string>
    <string name="create_here">, postula aqui</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="have_activation_code">¿Ya tienes tu código?</string>
    <string name="insert_here">ingresalo aqui</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_name">Nombres</string>
    <string name="hint_dni">DNI</string>
    <string name="postulate">postular</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lorem">Lorem ipsum dolor sit amet, adipiscing elit, dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="derechos_reservados">© 2017 Todos los derechos reservados</string>
    <string name="notify_message">Tienes una cita programada a las 5:00 PM</string>

</resources>
